--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ ul {
     padding: 48px 128px 100px;
     justify-content: space-between;
     gap: 32px;
+    align-items: center;
 }
 
 h1 {
@@ -61,8 +62,12 @@ h1 {
 
 .top img,
 .left {
-    max-width: 700px;
+    max-width: 500px;
     flex: 1;
+}
+
+.top img {
+    min-height: 200px;
 }
 
 img {
@@ -83,4 +88,7 @@ img {
     border: #3882f6;
     color: #f9faf8;
 }
+
+
+
 
