--- a/style.css
+++ b/style.css
@@ -65,20 +65,21 @@ h1 {
 
 .top img {
     height: 300px;
-    width: 700px;
+    width: 750px;
     flex: 0 1 auto;
-}
-
-img {
-    border: 3px solid rgb(27, 190, 245);
-    background-color: rgb(216, 209, 209);
+    background-color: grey;
+    border: 4px solid #3882f6;
 }
 
 .subtext {
-    color: #e5e7eb;
     font-size: 18px;
     margin-bottom: 8px;
 }
+
+.left .subtext {
+    color: #e5e7eb;
+}
+
 .left button {
     background-color: #3882f6;
     border-radius: 8px;
@@ -91,6 +92,47 @@ img {
     font-size: 15px;
 }
 
+.left {
+    padding-top: 30px;
+    max-width: 600px;
+}
 
+h2 {
+    color: #1F2937;
+    font-size: 36px;
+    margin: 48px;
+    text-align: center;
+}
 
+.content {
+    display: flex;
+    flex-direction: column;  
+}
 
+.img-and-text {
+    display: flex;
+    gap: 40px;
+    margin-bottom: 72px;
+    justify-content: center;
+}
+
+.one,
+.two,
+.three,
+.four {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 200px;
+    min-width: 100px;
+    text-align: center;
+}
+
+.img-and-text img {
+    border: 4px solid #3882f6;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 8px;
+}
