--- a/style.css
+++ b/style.css
@@ -156,3 +156,43 @@ h2 {
 }
 
 
+
+.sign-up {
+    display: flex;
+    justify-content: space-between;
+    margin: 128px 256px;
+    background-color: #3882f6;
+    padding: 50px 150px;
+    border-radius: 7px;
+    color: white;
+    align-items: center;
+}
+
+h3 {
+    font-size: 30px;
+    margin: 0 0 8px 0;
+}
+
+.sign-up button {
+    color: white;
+    background-color: #3882f6;
+    border: 2px solid white;
+    border-radius: 10px;
+    width: 180px;
+    height: 50px;
+    font-weight: 900;
+    font-size: 18px;
+}
+
+.sign-up-text .subtext {
+    color: #e5e7eb;
+}
+
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 32px;
+    color: white;
+}
