--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ h1 {
     flex: 0 1 auto;
     background-color: grey;
     border: 4px solid #3882f6;
+    min-width: 400px;
 }
 
 .subtext {
@@ -95,6 +96,7 @@ h1 {
 .left {
     padding-top: 30px;
     max-width: 600px;
+    min-width: 300px;
 }
 
 h2 {
@@ -114,6 +116,7 @@ h2 {
     gap: 40px;
     margin-bottom: 72px;
     justify-content: center;
+    min-width: 800px;
 }
 
 .one,
@@ -147,12 +150,17 @@ h2 {
     background-color: #e5e7eb;
     color: #1F2937;
     font-style: italic;
-    font-size: 36px;    
+    font-size: 36px;   
 }
 
 .author {
     text-align: right;
     font-weight: bold;
+    min-width: 300px;
+}
+
+.quote-text {
+    min-width: 700px;
 }
 
 
@@ -160,12 +168,14 @@ h2 {
 .sign-up {
     display: flex;
     justify-content: space-between;
+    gap: 32px;
     margin: 128px 256px;
     background-color: #3882f6;
     padding: 50px 150px;
     border-radius: 7px;
     color: white;
     align-items: center;
+    min-width: 800px; 
 }
 
 h3 {
