--- a/style.css
+++ b/style.css
@@ -65,11 +65,12 @@ h1 {
 
 .top img {
     height: 300px;
-    width: 750px;
+    width: auto;
     flex: 0 1 auto;
     background-color: grey;
-    border: 4px solid #3882f6;
+    border: 3px solid #3882f6;
     min-width: 400px;
+    padding: 5px;
 }
 
 .subtext {
@@ -133,11 +134,12 @@ h2 {
 }
 
 .img-and-text img {
-    border: 4px solid #3882f6;
+    border: 2px solid #3882f6;
     border-radius: 10px;
     width: 150px;
     height: 150px;
     margin-bottom: 8px;
+    padding: 10px;
 }
 
 
